# print-jobs-starter-project

./: .env  .gitignore  README.md  database.db  main.py  printjobs.db  pyproject.toml
_sql/: seed.sql
bl/: db_access.py
dal/: dynamo.py  mysql.py
models/: models.py
